--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@master
-      - name: Use Node.js 14.x
+      - name: Use Node.js 14.1
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: 14.1
       - name: yarn install and test
         run: |
           yarn install
